--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+
+  --font-roboto: 'Roboto', sans-serif;
+}
+
+body {
+  font-family: var(--font-inter); 
+}
